// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component check children have text <Button /> 1`] = `
.c0 {
  display: block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: auto;
  cursor: pointer;
  outline: none;
  border: 1px solid transparent;
  border-radius: 8px;
  background: #fff;
  color: #fff;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

<button
  className="c0"
  type="button"
>
  Title
</button>
`;

exports[`Button Component renders and create snapshot <Button /> 1`] = `
.c0 {
  display: block;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  width: auto;
  cursor: pointer;
  outline: none;
  border: 1px solid transparent;
  border-radius: 8px;
  background: #fff;
  color: #fff;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

<button
  className="c0"
  type="button"
/>
`;
